[package]
name = "kbparse-lib"
version = "0.2.0"
edition = "2021"
authors = ["HBchevelle68"]
description = "Apple Keybag parsing libray"
keywords = ["keybag", "macos", "ios", "apple"]
categories = [
    "parser",
    "operating systems",
    "parser implementations",
    "parsing tools",
]
license = "MIT"
homepage = "https://github.com/HBchevelle68/kbparse"
repository = "https://github.com/HBchevelle68/kbparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
